--- a/Base64Image/MainWindow.xaml
+++ b/Base64Image/MainWindow.xaml
@@ -1,12 +1,64 @@
 ﻿<Window x:Class="Base64Image.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Base64Image"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        Title="MainWindow" Height="300" Width="300" WindowStartupLocation="CenterScreen">
+    
+       
+    <Window.Resources>
+        <SolidColorBrush x:Key="DarkSquareColor" Color="#18FFFFFF" />
+        <SolidColorBrush x:Key="LightSquareColor" Color="#34FFFFFF" />
+    </Window.Resources>
+    <DockPanel>
         
-    </Grid>
+        <StatusBar DockPanel.Dock="Bottom">
+            <StatusBarItem>
+                <TextBlock Text="{Binding Path=Status}" />
+            </StatusBarItem>
+        </StatusBar>
+        
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="50"/>
+            </Grid.RowDefinitions>
+
+            <Canvas Name="canvas" Grid.Row="0" Grid.RowSpan="2" Grid.Column="0" Background="LightGray">
+                <!--https://davidowens.wordpress.com/2009/02/07/backgrounds-with-style/-->
+                <!--Source="{Binding Path=source}"-->
+                <Image Source="/marvin.jpg" Stretch="Uniform" x:Name="img"
+                    Width="{Binding Path=ActualWidth,  ElementName=canvas}" 
+                    Height="{Binding Path=ActualHeight,  ElementName=canvas}" 
+                />
+            </Canvas>
+
+            <GroupBox Grid.Row="0" Grid.Column="1" Header="format">
+                <StackPanel>
+                    <RadioButton GroupName="format">PNG</RadioButton>
+                    <RadioButton GroupName="format">JPG</RadioButton>
+                    <RadioButton GroupName="format">GIF</RadioButton>
+                </StackPanel>
+            </GroupBox>
+
+            <GroupBox Grid.Row="1" Grid.Column="1" Header="action">
+                <StackPanel>
+                    <Button Content="data"/>
+                    <Button Content="img"/>
+                    <Button Content="md"/>
+                </StackPanel>
+            </GroupBox>
+
+
+            <TextBox Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Text="{Binding Path=Text}" />
+        </Grid>
+    </DockPanel>
 </Window>
