--- a/Base64Image/MainWindow.xaml
+++ b/Base64Image/MainWindow.xaml
@@ -8,11 +8,6 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="300" WindowStartupLocation="CenterScreen">
     
-       
-    <Window.Resources>
-        <SolidColorBrush x:Key="DarkSquareColor" Color="#18FFFFFF" />
-        <SolidColorBrush x:Key="LightSquareColor" Color="#34FFFFFF" />
-    </Window.Resources>
     <DockPanel>
         
         <StatusBar DockPanel.Dock="Bottom">
@@ -34,8 +29,8 @@
 
             <Canvas Name="canvas" Grid.Row="0" Grid.RowSpan="2" Grid.Column="0" Background="LightGray">
                 <!--https://davidowens.wordpress.com/2009/02/07/backgrounds-with-style/-->
-                <!--Source="{Binding Path=source}"-->
-                <Image Source="/marvin.jpg" Stretch="Uniform" x:Name="img"
+                <!--Source="{Binding Path=source}" /marvin.jpg -->
+                <Image Source="{Binding Path=Source}" Stretch="Uniform" x:Name="img"
                     Width="{Binding Path=ActualWidth,  ElementName=canvas}" 
                     Height="{Binding Path=ActualHeight,  ElementName=canvas}" 
                 />
@@ -43,17 +38,20 @@
 
             <GroupBox Grid.Row="0" Grid.Column="1" Header="format">
                 <StackPanel>
-                    <RadioButton GroupName="format">PNG</RadioButton>
-                    <RadioButton GroupName="format">JPG</RadioButton>
-                    <RadioButton GroupName="format">GIF</RadioButton>
+                    <RadioButton x:Name="rbPNG" GroupName="format">PNG</RadioButton>
+                    <RadioButton x:Name="rbJPG" GroupName="format">JPG</RadioButton>
+                    <RadioButton x:Name="rbGIF" GroupName="format">GIF</RadioButton>
+                    
+                    
+                    
                 </StackPanel>
             </GroupBox>
 
             <GroupBox Grid.Row="1" Grid.Column="1" Header="action">
                 <StackPanel>
-                    <Button Command="{Binding ClickCommand}" Content="data"/>
-                    <Button Content="img"/>
-                    <Button Content="md"/>
+                    <Button x:Name="btnData" Content="_DATA" Click="BtnData_Click" /> <!--Command="{Binding ClickCommand}"-->
+                    <Button x:Name="btnImg" Content="_IMG" Click="BtnImg_Click" />
+                    <Button x:Name="btnMD" Content="_MD" Click="BtnMD_Click"/>
                 </StackPanel>
             </GroupBox>
 
