--- a/Base64Image/MainWindow.xaml
+++ b/Base64Image/MainWindow.xaml
@@ -1,6 +1,7 @@
-﻿<Window x:Class="Base64Image.MainWindow"
+﻿<mah:MetroWindow x:Class="Base64Image.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
         xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -8,8 +9,36 @@
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
         Topmost="True"
-        Title="Base64Image" Height="350" Width="400">
+        Title="Base64Image" Height="350" Width="450" TitleCharacterCasing="Normal" >
+
+    <mah:MetroWindow.Resources>
+        <ResourceDictionary>
+            <Style TargetType="{x:Type Button}" BasedOn="{StaticResource {x:Type Button}}">
+                <Setter Property="mah:ControlsHelper.ContentCharacterCasing" Value="Normal"/>
+            </Style>
+        </ResourceDictionary>
+    </mah:MetroWindow.Resources>
     
+    <mah:MetroWindow.RightWindowCommands>
+        <mah:WindowCommands>
+            <Button Click="LaunchGitHubSite" Content="visit GitHub site">
+                <Button.ContentTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal">
+                            <!--<iconPacks:PackIconModern Width="22"
+                                        Height="22"
+                                        VerticalAlignment="Center"
+                                        Kind="SocialGithubOctocat" />-->
+                            <TextBlock Margin="4 0 0 0"
+                         VerticalAlignment="Center"
+                         Text="{Binding}" />
+                        </StackPanel>
+                    </DataTemplate>
+                </Button.ContentTemplate>
+            </Button>
+        </mah:WindowCommands>
+    </mah:MetroWindow.RightWindowCommands>
+
     <DockPanel>
         
         <StatusBar DockPanel.Dock="Bottom">
@@ -40,9 +69,9 @@
 
             <GroupBox Grid.Row="0" Grid.Column="1" Header="format">
                 <StackPanel>
-                    <RadioButton x:Name="rbPNG" GroupName="format" Checked="rbPNG_Checked">PNG</RadioButton>
-                    <RadioButton x:Name="rbJPG" GroupName="format" Checked="rbJPG_Checked">JPG</RadioButton>
-                    <RadioButton x:Name="rbGIF" GroupName="format" Checked="rbGIF_Checked">GIF</RadioButton>
+                    <RadioButton x:Name="rbPNG" GroupName="format" Checked="RbPNG_Checked">PNG</RadioButton>
+                    <RadioButton x:Name="rbJPG" GroupName="format" Checked="RbJPG_Checked">JPG</RadioButton>
+                    <RadioButton x:Name="rbGIF" GroupName="format" Checked="RbGIF_Checked">GIF</RadioButton>
                     
                     
                     
@@ -61,4 +90,4 @@
             <TextBox Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Text="{Binding Path=Text}" />
         </Grid>
     </DockPanel>
-</Window>
+</mah:MetroWindow>
